# bigscraperqt

./: AppImageBuilder.yml  MANIFEST.in  README.md  bsqt.sh  io.github.fr75s.bigscraper-qt.json  python3-requirements.json  requirements.txt  requirementsPyQt.txt  setup.cfg  setup.py
bsqt/: TASK_TEMPLATE.py  __main__.py  bsqt.py  const.py  deftask.py  export.py  main.qml  resources.py  resources.qrc  scrapemany.py  scrapeone.py
bsqt/Common/: BsqtButton.qml  FormText.qml
bsqt/CommonUI/: BsqtButton.qml  ButtonLabelChoice.qml  ButtonLabelRow.qml  DDLabelRow.qml  DropDownDialog.qml  InfoModal.qml  NNHeaderItem.qml  PageSubtitle.qml  PageTitle.qml  SelectModal.qml  SystemSelect.qml  TextInputLabelRow.qml
bsqt/Components/: HeaderBar.qml
bsqt/Pages/: Export.qml  Home.qml  Options.qml  ScrapeMany.qml  ScrapeOne.qml  Work.qml
docs/: index.html  main.css  page.js
docs/credits/: index.html
docs/features/: index.html
docs/fonts/: fonts.css
docs/guide/: index.html
docs/install/: index.html
share/applications/: io.github.fr75s.bigscraperqt.desktop
share/metainfo/: io.github.fr75s.bigscraperqt.metainfo.xml
