[metadata]
name = bigscraper-qt
version = 1.4.0
description = Scrape Game Metadata from Launchbox
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/DavidoTek/ProtonUp-Qt
author = Fr75s
license = GPL-3.0
license_files =
    LICENSE
#project_urls =
#    Bug Tracker = https://github.com/DavidoTek/ProtonUp-Qt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
python_requires = >=3.6
install_requires =
    PySide6-Essentials==6.3.1
    Unidecode==1.3.4
    requests==2.27.1
    yt_dlp==2022.6.22.1
	lxml==4.9.0
	xdg==5.1.1

packages = find:
